--- a/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
+++ b/src/main/webapp/pages/UserOpenForms/UserOpenForms.html
@@ -16,9 +16,9 @@
                             <wm-layoutgrid name="layoutgrid2">
                                 <wm-gridrow name="gridrow3">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn3_1" padding="1em unset">
-                                        <wm-composite name="composite1">
-                                            <wm-label class="col-md-3 form-control-static" name="label1" caption="Select View" fontweight="bold"></wm-label>
-                                            <wm-container class="col-md-9" name="container1" width="260px">
+                                        <wm-composite name="composite1" margin="unset unset unset 0.2em">
+                                            <wm-label class="col-md-3 form-control-static" name="label1" caption="Select View" fontweight="bold" width="100px"></wm-label>
+                                            <wm-container class="col-md-9" name="container1" width="180px">
                                                 <wm-select name="selectView" dataset="bind:Variables.SelectView.dataSet" datafield="All Fields" displayfield="viewName" datavalue="bind:Variables.SelectView.firstRecord"></wm-select>
                                             </wm-container>
                                         </wm-composite>
