--- a/src/main/webapp/pages/MyProjects/MyProjects.html
+++ b/src/main/webapp/pages/MyProjects/MyProjects.html
@@ -23,8 +23,7 @@
                                     </wm-grid-column-group>
                                     <wm-grid-column binding="modifiedDate" caption="Date Modified" type="string" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                    <wm-grid-action key="addNewRow" display-name="New Project" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="Widgets.dialogCreateProject.open();addNewRowAction($event);addNewRowAction1($event)"
-                                    shortcutkey="" disabled="false"></wm-grid-action>
+                                    <wm-grid-action key="addNewRow" display-name="New Project" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="Widgets.dialogCreateProject.open();addNewRowAction($event);addNewRowAction1($event)" shortcutkey="" disabled="false"></wm-grid-action>
                                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-assignment" title="View Project" action="updaterowAction($event)" disabled="false"></wm-grid-row-action>
                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.confirmdialogSoftDeleteProjectCo.open()" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
@@ -77,6 +76,18 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="viewSoftDeleteProjectConfirm">
-        <wm-confirmdialog name="confirmdialogSoftDeleteProjectCo" title="Delete Project" message="You are about to delete a project.  Once a project has been deleted you will not be able to undo this.  Are you sure you want to delete this project?" on-ok="Variables.ProjectSoftDelete.invoke()"></wm-confirmdialog>
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Delete Project" iconclass="wi wi-trash" name="confirmdialogSoftDeleteProjectCo">
+            <wm-layoutgrid name="layoutgrid26_1">
+                <wm-gridrow name="gridrow81_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn159_2" horizontalalign="center">
+                        <wm-label padding="unset 0.5em" caption="You are about to delete a project.  Once a project has been deleted you will not be able to undo this.  Are you sure you want to delete this project?" name="label76"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions8">
+                <wm-button class="btn-primary" caption="OK" on-click="Variables.ProjectSoftDelete.invoke()" name="buttonDeleteProjectOK" iconclass="wi wi-done"></wm-button>
+                <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="buttonDeleteProjectCancel" iconclass="wi wi-cancel" on-click="Widgets.confirmdialogSoftDeleteProjectCo.close()"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
     </wm-view>
 </wm-page>
