cleanup and updated delete confirmation dialog Files modified - [MyMunicipality.html,pages-config.json,MunicipalityProjects.html]

--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -133,7 +133,7 @@
                             <wm-layoutgrid height="100%" name="layoutgrid9">
                                 <wm-gridrow height="100%" name="gridrow12">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" class="col-xs-3" name="gridcolumn26">
-                                        <wm-icon iconsize="3em" iconclass="wi wi-message" name="icon8"></wm-icon>
+                                        <wm-icon iconsize="3em" iconclass="wi wi-building" name="icon8"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn27">
                                         <wm-label caption="Projects" class="p" fontsize="1.5" fontunit="em" name="label16_1"></wm-label>
