Fixed-Rich text field is adding question marks (MyProjects)Adding description of project to Database by btoa encoding and display it by atob decoding Files modified - [ViewProject.js,MyProjects.variables.json,MyProjects.js,ViewProject.html,ViewProject.variables.json]

--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -35,7 +35,7 @@
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn9">
                                         <wm-label class="col-md-12 control-label" name="ProjectDescription" margin="0.5em unset 0.5em 0.5em" caption="Project Description"></wm-label>
                                         <wm-composite name="composite10">
-                                            <wm-html name="htmlProjectDescription" margin="2em unset unset 0.5em" content="bind:Variables.CurrentProject.dataSet.data[$i].projectDescription">bind:Variables.CurrentProject.dataSet.data[$i].projectDescription</wm-html>
+                                            <wm-html name="htmlProjectDescription" margin="2em unset unset 0.5em"></wm-html>
                                         </wm-composite>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn110_1"></wm-gridcolumn>
